[project]
name = "timeseries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keras>=3.11.3",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
]
